fix: wrap markdown stylesheet

--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -17,11 +17,3 @@ body {
 .btn:hover {
   @apply bg-pku-red bg-op-3.9;
 }
-
-.markdown-body ol {
-  @apply list-decimal;
-}
-
-.markdown-body ul {
-  @apply list-disc;
-}
